@@ -1,19 +1,17 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST lettuce-0.1.19.tar.gz 65057 RMD160 a2459cc2ce491f2961ab80af9fe8d79bf3744fcd SHA1 9f9efcc5a33204af86a78f5db1f1d78e1e87673f SHA256 1d8f28987ce5cd9299c6a74a28651f14bec0bb4fbe4d50e1e54a3c9fcf7418a7
 DIST lettuce-0.1.20.tar.gz 66467 RMD160 eb936e6dfe6cee54616fe7ef1480af1a682d3de1 SHA1 1fdf0c62e510a59efa6cd3b1f0d388527e2a2c5a SHA256 8b55a6eb2dd82a8836b666801ff3bb7630ed818b991140899342e4a0a01abcab
 DIST lettuce-0.1.21.tar.gz 66536 RMD160 e2daab9cc2988bd56c13094493a159700be520fa SHA1 9fc47b96bb91a537ba0a5dcd94e88d34a6b2b955 SHA256 1c9041e3b20e838dacd30b85b68e0d19167388a6d7cac35054cf76d4ffc01d9c
-EBUILD lettuce-0.1.19.ebuild 527 RMD160 6b2642a38bbc5ad86f92f053bbda9e0d4dccfd45 SHA1 5bada943e37eb1b1a2bd97e9168738ec61d22225 SHA256 bb893e25d25a06d77b3502b08ed47a79b918ca16c910a8edb5659829c6727842
-EBUILD lettuce-0.1.20.ebuild 526 RMD160 aacff1171e8938396a1516395d839e5f1f2c847d SHA1 7a39612b3b6b8a5030f0905e83ef983d04a73732 SHA256 e1631f006fe38052c6959c0894bc2208d46e585ce10ba25770845bca9dee238a
+EBUILD lettuce-0.1.20.ebuild 525 RMD160 37e055fb255790622d4237a1bc750d3905fcb0fa SHA1 08a96cc5b5f8a700de88024eca713f6adaaee753 SHA256 7e555bf3339871fad8bc02daaf7189c86247dca3dc5e99476f0322998637f3db
 EBUILD lettuce-0.1.21.ebuild 527 RMD160 2e8d390a94bef2f622567ddc611ac6e9dd158b42 SHA1 88448bb875d2e6d04d0e831d27a60ac5a5bc2551 SHA256 d02fb78b55246fa08426c8acae32344b29e1e69d342bfbf2a4aa814430446368
-MISC ChangeLog 5377 RMD160 0b41db7eabd8e2fe72b68e20ba429ac4f237eaf2 SHA1 dfefe040fc85cc2cf6ddf3ce0d502f579e0f409a SHA256 29aad72ed91fb1405486882965cf25c9d0b0c11380ac95ac6201eba03e2b0825
+MISC ChangeLog 5489 RMD160 9ef9a669c879149b31800d8cfe836da5262f70a5 SHA1 9df45f1e42021c4a4d76c37d98400f315a0d16d9 SHA256 084b8139944be17a68400b0097a757e2348b626f65d129757302f63163dd2f0b
 MISC metadata.xml 543 RMD160 ba3769e47c6fd85b04b312ae9e19f0b7df54d047 SHA1 9348d7b60519187a8c2634ed087236ae176d3c9b SHA256 ea4a59405434a4b345393c1bc788273477110612782560fa496f8e92c5357db3
 MISC watch 71 RMD160 edd7da79f12dfdb2aefdeef0ad84169198ac81e1 SHA1 179d11f0283700ba50fec038510e6799bf4cda97 SHA256 38b70a11ff644c207b17b11d885bbafb7166e1b9bcc238b58a630f54c8cd0b4c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk2Ip2AACgkQzJrj3cAXR0mCpQCeNkYbnSWQV3BZwZCxNbG7Brbj
-qYIAn3MHlaDnmJHur/HdroTClgXnjlNW
-=POr6
+iEUEARECAAYFAk2Jq84ACgkQzJrj3cAXR0lXaACYnQu8QDVAKYYu7AB0BiXWuqJm
+ZgCdEY5j+ze0nr50d/nmuSJYpUkjC8A=
+=GRP1
 -----END PGP SIGNATURE-----
