@@ -223,8 +223,7 @@
  * Licence: ``MIT``
  * Versions:
 
-  * `0.1.19 <https://github.com/JNRowe/misc-overlay/blob/master/dev-python/lettuce/lettuce-0.1.19.ebuild>`__  ``amd64``, ``x86``
-  * `0.1.20 <https://github.com/JNRowe/misc-overlay/blob/master/dev-python/lettuce/lettuce-0.1.20.ebuild>`__  ``amd64``, ``~x86`` (due 2011-03-17)
+  * `0.1.20 <https://github.com/JNRowe/misc-overlay/blob/master/dev-python/lettuce/lettuce-0.1.20.ebuild>`__  ``amd64``, ``x86``
   * `0.1.21 <https://github.com/JNRowe/misc-overlay/blob/master/dev-python/lettuce/lettuce-0.1.21.ebuild>`__  ``~amd64`` (due 2011-03-31), ``~x86`` (due 2011-03-31)
 
 * ``logbook`` - http://pypi.python.org/pypi/Logbook/
